--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,13 +10,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/uuid": "^7.0.2",
     "bootstrap": "^4.4.1",
+    "convert-excel-to-json": "^1.6.1",
+    "date-fns": "^2.11.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^10.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "read-excel-file": "^4.0.6",
+    "styled-components": "^5.0.1",
+    "toastify": "^2.0.0",
+    "typescript": "~3.7.2",
+    "uuid": "^7.0.2",
+    "xlsx": "^0.15.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.0.1",
+    "@types/uuid": "^7.0.2",
+    "@types/xlsx": "^0.0.36"
   }
 }
