--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,9 +20,9 @@
     "react-dropzone": "^10.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-toastify": "^5.5.0",
     "read-excel-file": "^4.0.6",
     "styled-components": "^5.0.1",
-    "toastify": "^2.0.0",
     "typescript": "~3.7.2",
     "uuid": "^7.0.2",
     "xlsx": "^0.15.6"
