--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,6 @@
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^7.0.2",
     "bootstrap": "^4.4.1",
-    "convert-excel-to-json": "^1.6.1",
     "date-fns": "^2.11.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -24,8 +23,7 @@
     "read-excel-file": "^4.0.6",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2",
-    "uuid": "^7.0.2",
-    "xlsx": "^0.15.6"
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
